Support for new Assymetric and symmetric encryption of license